apps/mealie/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "mealie"
  labels:
    app: "mealie"
    app.kubernetes.io/instance: "mealie"
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: "RollingUpdate"
  selector:
    matchLabels:
      app: "mealie"
      app.kubernetes.io/instance: "mealie-prod"
  template:
    metadata:
      labels:
        app: "mealie"
        app.kubernetes.io/name: "mealie"
        app.kubernetes.io/instance: "mealie-prod"
        app.kubernetes.io/component: "mealie"
        app.kubernetes.io/part-of: "mealie"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 45911
        runAsGroup: 45911
        fsGroup: 45911
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: mealie
          image: "ghcr.io/mealie-recipes/mealie:v3.28.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: "mealie"
              containerPort: 9000
              protocol: "TCP"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 45911
            runAsGroup: 45911
            readOnlyRootFilesystem: true
            privileged: false
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              memory: "256Mi"
              cpu: "20m"
            limits:
              memory: "1Gi"
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: "storage"
              mountPath: "/app/data"
            - name: "nltk"
              mountPath: "/nltk_data"
            - name: "tmp"
              mountPath: "/tmp"
      volumes:
        - name: "storage"
          emptyDir:
            sizeLimit: "5Gi"
        - name: "nltk"
          emptyDir:
            sizeLimit: "5Gi"
        - name: "tmp"
          emptyDir:
            sizeLimit: "1Gi"
