apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
    - port: 80
      targetPort: mealie
