apps/mealie/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "mealie"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "mealie"
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: "mealie"
      from: []
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
